k8s/network/networkpolicies.yaml
# ================================================
# Kubernetes Manifest for the Minecraft Project
# Author   : Lumitek
# Date     : 2025-11-13
# Description:
#   This manifest contains the following configurations:
#   - The Minecraft Server Network Policies
# ================================================
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minecraft-networkpolicies
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
      - protocol: TCP
        port: 25565
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
      - protocol: TCP
        port: 53
      - protocol: UDP
        port: 53
  - to:
    - ipBlock: 
        cidr: 0.0.0.0/0
  - ports:
      - protocol: TCP
        port: 80
      - protocol: TCP
        port: 443
---
